[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/Laser.tscn" type="PackedScene" id=1]
[ext_resource path="res://models/player/player.glb" type="PackedScene" id=2]
[ext_resource path="res://scripts/Player.gd" type="Script" id=3]
[ext_resource path="res://scenes/effects/Explosion.tscn" type="PackedScene" id=4]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.906798, 0.0775551, 0.725836 )

[node name="Player" type="Area"]
script = ExtResource( 3 )
Laser = ExtResource( 1 )

[node name="player" parent="." instance=ExtResource( 2 )]

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="Explosion" parent="." instance=ExtResource( 4 )]

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="RegenTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="area_entered" from="." to="." method="on_collision"]
[connection signal="exploded" from="Explosion" to="." method="cleanup_player"]
[connection signal="timeout" from="ReloadTimer" to="." method="reload"]
[connection signal="timeout" from="RegenTimer" to="." method="heal"]
